# agentcore-samples-websearch

./: .gitignore  CONTRIBUTORS.md
01-features/03-connect-your-agent-to-anything/: README.md
01-features/03-connect-your-agent-to-anything/03-web-search/: README.md  requirements.txt
01-features/03-connect-your-agent-to-anything/03-web-search/01-raw-mcp/: README.md  raw_mcp_call.py
01-features/03-connect-your-agent-to-anything/03-web-search/01-setup-gateway/: README.md  setup_gateway.py
01-features/07-centralize-and-govern-your-ai-infrastructure/01-gateway/: .gitignore
01-features/07-centralize-and-govern-your-ai-infrastructure/01-gateway/gatewaylabproject/app/aws_docs_agent/: main.py  pyproject.toml
01-features/07-centralize-and-govern-your-ai-infrastructure/01-gateway/gatewaylabproject/app/monitoring_a2a_agent/: agent_executor.py  main.py  prompt.py  pyproject.toml  tools.py
02-use-cases/: README.md
02-use-cases/01-conversational-agents/deep-research-agent/: README.md  cleanup.py  gateway_setup.py  requirements.txt
02-use-cases/deep-research-agent/: README.md  deep_research_agent.py  gateway_setup.py  requirements.txt
03-integrations/agents-hosted-outside-runtime/agents-on-aws-lambda/: README.md
06-workshops/05-AgentCore-tools/: README.md
06-workshops/05-AgentCore-tools/03-Agent-Core-web-search/: README.md  requirements.txt
06-workshops/07-AgentCore-evaluations/05-groundtruth-based-evalautions/: Dockerfile
06-workshops/13-AgentCore-payments/: README.md
06-workshops/13-AgentCore-payments/02-use-cases/: README.md
(+191 files in other folders)
