[project]
name = "aws-docs-agent"
version = "0.1.0"
description = "AWS Documentation agent on AgentCore Runtime (HTTP)"
requires-python = ">=3.12"
dependencies = [
    "bedrock-agentcore>=0.1.1",
    "strands-agents>=1.2.0",
    "strands-agents-tools>=0.2.3",
    "mcp>=1.19.0",
    "awslabs-aws-documentation-mcp-server>=1.1.0",
]
