[project]
name = "monitoring-a2a-agent"
version = "0.1.0"
description = "CloudWatch monitoring agent on AgentCore Runtime (A2A)"
requires-python = ">=3.12"
dependencies = [
    "a2a-sdk[http-server]==0.3.24",
    "strands-agents>=1.2.0",
    "bedrock-agentcore>=0.1.1",
    "uvicorn>=0.37.0",
    "boto3>=1.34.0",
]
